Remove Exclude Time Clock option

--- a/custom_components/heatmiserneo/translations/en.json
+++ b/custom_components/heatmiserneo/translations/en.json
@@ -6,8 +6,7 @@
                 "title": "Heatmiser Neo",
                 "data": {
                     "host": "Host",
-                    "port": "Port",
-                    "exclude_time_clock": "Exclude Time Clock"
+                    "port": "Port"
                 }
             },
             "zeroconf_confirm": {
